k8s/ns-nr-app.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: nr-app
  labels:
    istio-injection: enabled
