k8s/gw.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: nr-app
  namespace: istio-system
spec:
  selector:
    app: istio-ingressgateway
  servers:
  - port:
      number: 80
      name: http-wildcard
      protocol: HTTP
    hosts:
    - "*"
